# notify-complete

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: cargo-test.yml
src/: config.rs  main.rs
