[package]
name = "notify-complete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
dirs = "4.0.0"
notify-rust = "4.5.5"
serde = "1.0.133"
serde_derive = "1.0.133"
toml = "0.5.8"
humantime = "2.1.0"